# IntrusionScope

./: .gitignore  DESIGN.md  LICENSE  README.md  REQUIREMENTS.md  go.mod
artifacts/builtin/: linux_persistence.yaml  network_connections.yaml  process_list.yaml  suspicious_processes.yaml  windows_persistence.yaml
configs/: default.conf
configs/iocs/: builtin_iocs.json
configs/playbooks/: quick_triage.yaml  standard_investigation.yaml
docs/: artifact_schema.md  ifql_reference.md  user_guide.md
engine/: Cargo.toml
engine/src/: ffi.rs  ioc.rs  lib.rs  matcher.rs  sigma.rs  types.rs  yara.rs
internal/config/: config.go
internal/logger/: logger.go
internal/output/: output.go
internal/sync/: sync.go
pkg/artifact/: artifact.go
pkg/collector/: collector.go  filesystem.go  init.go  logs.go  network.go  process.go  registry.go  safeexec.go  users.go
pkg/detector/: detection_types.go  detector.go  detector_test.go  init.go  ioc.go  manager.go  precise_match.go  rules_loader.go  rust_engine.go  rust_engine_nocgo.go  sigma.go  types.go  yara.go
pkg/ifql/: executor.go  parser.go
pkg/signature/: parser.go  signature.go
rules/sigma/: suspicious_powershell.yml
rules/yara/: suspicious_process.yar
