[package]
name = "intrusionscope-engine"
version = "0.1.0"
edition = "2021"
authors = ["Prometheus Labs"]
description = "High-performance detection engine for IntrusionScope"
license = "MIT"

[lib]
name = "intrusionscope_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# Hash functions
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# Data structures
hashbrown = "0.14"
dashmap = "5.5"

# Memory management
parking_lot = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# FFI
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
